src/test/deca/syntax/invalid/declVar-nameWithFigures.deca
// Description:
//    Déclaration de variables
//
// Résultats:
//    Ligne 11: Nom de variable invalide
//
// Historique:
//    Créé le 10/01/2024

{
   int 123abc = 7;
}
